<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="goto_start">Library</string>
    <string name="goto_playback">Playback</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="delete_item">Delete</string>
    <string name="sending_item">Send</string>
    <string name="menu_send">Send audio file</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_artist_desc_nosdcard" msgid="1843750591006508005">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from USB storage.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc_nosdcard" msgid="535515999268177079">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc_nosdcard" msgid="1856800468541831408">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="scanning_nosdcard" msgid="3529383847223198502">Scanning USB storage\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard" msgid="9008284946643270850">No USB storage</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard" msgid="1169260755336159747">Your phone does not have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard" msgid="1162763571147174655">USB storage unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_busy_message_nosdcard" msgid="8071868348072728830">Sorry, your USB storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_title_nosdcard" msgid="165682155008600643">USB storage error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard" msgid="4574563894036627855">An error was encountered on your USB storage.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="weekpicker_set">Done</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">Music</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="videobrowserlabel">Videos</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g></string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="working_artists">Artists\u2026</string>
    <string name="working_albums">Albums\u2026</string>
    <string name="working_songs">Songs\u2026</string>
    <string name="working_playlists">Playlists\u2026</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="gadget_track">Track <xliff:g id="track_number">%d</xliff:g></string>
    <string name="fail_to_start_stream">Failed to play the requested stream.</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="effectspanel">Sound effects</string>
    <string name="settings">Music settings</string>
    <string name="audio_focus_category_title">Audio Focus</string>
    <string name="enable_focus_loss_ducking_title">Focus loss ducking</string>
    <string name="enable_focus_loss_ducking_summary">Instead of pausing playback, lower playback volume during audible notifications</string>
    <string name="duck_attenuation_db_title">Duck attentuation</string>
    <string name="duck_attenuation_db_summary">Select the amount by which to attenuate the volume during focus loss</string>
    <string name="shaker_title_nowplaying">Shake Actions</string>
    <string name="shaker_summary_nowplaying">Play, next, prev, etc</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="sensitivity_summary">Shake &amp; Flip sensitivity</string>
    <string name="gestures_category_title">Gestures</string>
    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Control music playback via gestures on the \"Now playing\" screen</string>
    <string name="enable_haptic_feedback_title">Haptic feedback</string>
    <string name="enable_haptic_feedback_summary">Enable phone vibration in response to completed gestures</string>
    <string name="edit_gestures_title">Edit gestures</string>
    <string name="widget_category_title">Widget</string>
    <string name="widget_transparency_title">Transparency</string>
    <string name="widget_transparency_summary">Select level of translucency for the music widget background</string>
    <string name="various_category_title">Various</string>
    <string name="a2dp_autoplay_title">A2DP autoplay</string>
    <string name="a2dp_autoplay_summary">Start playback automatically when a bluetooth A2DP device is connected</string>
    <string name="flip_to_pause">Flip To Pause</string>
    <string name="flip_to_pause_summary">Flip your phone over to quickly pause your music then back up to resume</string>
    <string name="status_bar_ui_title">Status Bar UI</string>
    <string name="np_media_album_art_title">Album Art</string>
    <string name="np_media_album_art_summary">Show album art</string>
    <string name="status_bar_nonya_title">Minimal</string>
    <string name="status_bar_nonya_summary">Remove the album art/status icon when the status bar is extended</string>
    <string name="tick">Ticker Text</string>
    <string name="tick_summary">Display a short preview of your notification\'s content </string>
    <string name="np_tv_artist">Artist and Album Name</string>
    <string name="np_tv_track">Track Name</string>
    <string name="np_tv_artist_summary">Show artist and album name</string>
    <string name="np_tv_track_summary">Show track name</string>
</resources>