<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2011, The CyanogenMod Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings"
    android:key="settings">

    <PreferenceCategory android:title="@string/audio_focus_category_title">

        <CheckBoxPreference android:key="enable_focus_loss_ducking"
            android:title="@string/enable_focus_loss_ducking_title"
            android:summary="@string/enable_focus_loss_ducking_summary"
            android:defaultValue="false" />

        <ListPreference android:key="duck_attenuation_db"
            android:title="@string/duck_attenuation_db_title"
            android:summary="@string/duck_attenuation_db_summary"
            android:entries="@array/duck_attenuation_db_entries"
            android:entryValues="@array/duck_attenuation_db_entryvalues"
            android:defaultValue="8"
            android:dialogTitle="@string/duck_attenuation_db_title"
            android:dependency="enable_focus_loss_ducking" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gestures_category_title">

        <CheckBoxPreference android:key="enable_gestures"
            android:title="@string/enable_gestures_title"
            android:summary="@string/enable_gestures_summary"
            android:defaultValue="false" />

        <CheckBoxPreference android:key="enable_haptic_feedback"
            android:title="@string/enable_haptic_feedback_title"
            android:summary="@string/enable_haptic_feedback_summary"
            android:defaultValue="false"
            android:dependency="enable_gestures" />

        <PreferenceScreen android:key="edit_gestures"
            android:title="@string/edit_gestures_title"
            android:dependency="enable_gestures">
            <intent
                android:targetPackage="com.android.music"
                android:targetClass="com.android.music.EditGesturesActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/widget_category_title">

        <ListPreference android:key="widget_transparency"
            android:title="@string/widget_transparency_title"
            android:summary="@string/widget_transparency_summary"
            android:entries="@array/widget_transparency_entries"
            android:entryValues="@array/widget_transparency_entryvalues"
            android:defaultValue="0"
            android:dialogTitle="@string/widget_transparency_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/status_bar_ui_title" >
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="cbStatusArt"
                        android:summary="@string/np_media_album_art_summary"
                        android:title="@string/np_media_album_art_title" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="cbStatusNonya"
                        android:summary="@string/status_bar_nonya_summary"
                        android:title="@string/status_bar_nonya_title" />
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="cbStatusTicker"
                        android:summary="@string/tick_summary"
                        android:title="@string/tick" />
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="tvStatusLine1"
                        android:summary="@string/np_tv_track_summary"
                        android:title="@string/np_tv_track" />
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="tvStatusLine2"
                        android:summary="@string/np_tv_artist_summary"
                        android:title="@string/np_tv_artist" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/various_category_title">

        <CheckBoxPreference android:key="enable_a2dp_autoplay"
            android:title="@string/a2dp_autoplay_title"
            android:summary="@string/a2dp_autoplay_summary"
            android:defaultValue="false" />

                <ListPreference
                    android:defaultValue="0"
                    android:dialogTitle="@string/shaker_title_nowplaying"
                    android:entries="@array/shaker_db_entries"
                    android:entryValues="@array/shaker_db_entrievalues"
                    android:key="shake_actions_db"
                    android:summary="@string/shaker_summary_nowplaying"
                    android:title="@string/shaker_title_nowplaying" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="cbFlip"
                    android:summary="@string/flip_to_pause_summary"
                    android:title="@string/flip_to_pause" />

                <PreferenceScreen
                    android:key="sens_picker"
                    android:title="@string/sensitivity" 
                    android:summary="@string/sensitivity_summary">
                    <intent
                        android:action="com.android.music.Sensitivity"
                        android.targetClass="com.android.music.Sensitivity"
                        android:targetPackage="com.android.music" />
                </PreferenceScreen>


    </PreferenceCategory>

</PreferenceScreen>
